# gear-demo

./: Cargo.toml  README.md  rust-toolchain.toml
fungible-token/: Cargo.toml  README.md  build.rs
fungible-token/io/: Cargo.toml
fungible-token/io/src/: lib.rs
fungible-token/src/: lib.rs  tests.rs
fungible-token/state/: Cargo.toml
fungible-token/state/src/: lib.rs
gear-lib/: Cargo.toml  README.md
gear-lib/src/: lib.rs  tokens.rs  tx_manager.rs
gear-lib/src/tokens/: fungible.rs  multi.rs  non_fungible.rs  types.rs
gear-lib/src/tokens/fungible/: encodable.rs  extensions.rs
gear-lib/src/tokens/non_fungible/: encodable.rs
gear-lib/src/tx_manager/: offset.rs
nft/: Cargo.toml  README.md  build.rs
nft-marketplace/: Cargo.toml  README.md  build.rs
nft-marketplace/io/: Cargo.toml
nft-marketplace/io/src/: lib.rs
nft-marketplace/src/: auction.rs  lib.rs  nft_messages.rs  offers.rs  payment.rs  sale.rs
nft-marketplace/state/: Cargo.toml  build.rs
nft-marketplace/state/src/: lib.rs
nft-marketplace/tests/: auction.rs  fail_buy_with_ft.rs  fail_offers.rs  offers.rs  sale.rs  success_buy_with_ft.rs  success_buy_with_native_tokens.rs  success_offers.rs
nft-marketplace/tests/utils/: common.rs  ftoken.rs  marketplace.rs  mod.rs  nftoken.rs  prelude.rs
nft-marketplace/tests/utils_gclient/: common.rs  ft.rs  marketplace.rs  mod.rs  nft.rs
nft/io/: Cargo.toml
nft/io/src/: lib.rs
nft/src/: lib.rs
nft/tests/: node_tests.rs  tests.rs  utils.rs  utils_node.rs
src/: lib.rs
src/test/: cilent.rs  test.rs
tamagotchi/: .binpath
tamagotchi/io/src/: lib.rs
tamagotchi/src/: lib.rs
tamagotchi/state/: .binpath
