[package]
name = "gear-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { tag = "v1.4.1", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "v3.6.12", default-features = false}
gtest = { tag = "v1.4.1" }
gclient = {tag = "v1.4.1" }
tokio = { version = "1.38.0", features = ["full"] }