[workspace]
resolver = "2"
members = [
    "tamagotchi",
    "tamagotchi/state",
]

[workspace.package]
authors = ["alphonse"]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
tamagotchi.path = "tamagotchi"
tamagotchi-io.path = "tamagotchi/io"


# Gear
gstd = "1.4.1"
gear-wasm-builder = "1.4.1"
gmeta = "1.4.1"
parity-scale-codec = { version = "3.6.12", default-features = false }