[workspace]
resolver = "2"
members = [
    "tamagotchi",
    "tamagotchi/state",
    "nft",
    "nft/io",
     # Noncontract crates
    "gear-lib"
]

[workspace.package]
authors = ["alphonse"]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
nft.path = "nft"
nft-io.path = "nft/io"
tamagotchi.path = "tamagotchi"
tamagotchi-io.path = "tamagotchi/io"

# Local libraries
# Keep in the lexicographic order!

gear-lib.path = "gear-lib"
# Gear
gstd = "1.4.1"
gear-wasm-builder = "1.4.1"
gmeta = "1.4.1"
gclient = "1.4.2"
gtest = "1.4.2"
gear-core = "1.4.2"

# External
ahash = { version = "0.8", default-features = false, features = ["no-rng"] }
indexmap = { version = "2", default-features = false }
primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "34", default-features = false, features = ["full_crypto", "sp-externalities"] }
parity-scale-codec = { version = "3.6.12", default-features = false }
tokio = "1"
scale-info = { version = "2", default-features = false }